fix for behavior with small screens (collapsed navbar overlays jumbotron)

--- a/css/lacuna.css
+++ b/css/lacuna.css
@@ -34,5 +34,5 @@ body, html {
 }
 
 #logo {
-  margin-top: 20px;
+  margin-top: 0px;
 }
